--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -1,7 +1,8 @@
 .footer {
-  margin-top: 40px;
   padding: 18px;
   text-align: center;
-  color: #64748b;
+  color: #25272b;
+  font-weight: 500;
   font-size: 14px;
+  background-color:#55efe26e;
 }
